--- a/style.css
+++ b/style.css
@@ -153,3 +153,12 @@ body {
     gap: 30px;
   }
 }
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+  text-decoration: none;
+}
